🐛 Fixed Markdown images breaking out of container
refs #6

- Images inserted with Markdown needed to have a `max-width:100%` in order to not break out of their parent `p` container.

--- a/assets/main/sass/layout/_ghost.scss
+++ b/assets/main/sass/layout/_ghost.scss
@@ -172,6 +172,11 @@
 // Content
 // --------------------------------------------
 
+// Markdown images and videos
+.content p > img, .content p > video {
+    max-width: 100%;
+}
+
 .kg-card {
     margin: 0 0 2rem 0;
 }
